samples/_failures_safe/1761606094_826ccb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ad8a0d6.c: In function ‘main’:
./samples/SAFE/__tmp_3ad8a0d6.c:136:25: error: ‘get’ undeclared (first use in this function); did you mean ‘getc’?
  136 |     enum Operation op = get
      |                         ^~~
      |                         getc
./samples/SAFE/__tmp_3ad8a0d6.c:136:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3ad8a0d6.c:136:10: error: expected ‘,’ or ‘;’ at end of input
  136 |     enum Operation op = get
      |          ^~~~~~~~~
./samples/SAFE/__tmp_3ad8a0d6.c:136:10: error: expected declaration or statement at end of input
